--- a/package.json
+++ b/package.json
@@ -12,7 +12,21 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "docxtemplater-image-module-free": "^1.1.1",
     "express": "^4.21.1",
-    "html-to-docx": "^1.8.0"
+    "fs": "^0.0.1-security",
+    "html-docx-js": "^0.3.1",
+    "html-pdf-chrome": "^0.8.4",
+    "html-to-docx": "^1.8.0",
+    "jsdom": "^25.0.1",
+    "jszip": "^3.10.1",
+    "mammoth": "^1.8.0",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
+    "pdf2docx": "^0.0.0",
+    "sharp": "^0.33.5",
+    "uuid": "^10.0.0",
+    "ws": "^8.18.0"
   }
 }
